--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ telegrambot.botToken=5253249290:AAE_zb8dax3bRkNnoQmNbu9M2OQObrKdMpw
 telegrambot.webHookPath=https://f5d6beeb7b93.ngrok.io
 
 
-telegrambot.adminId=39376213
+telegrambot.adminId=637609845
 
 eventservice.period =600000
 
@@ -16,8 +16,15 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:12}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+#Hibernate ??????? ??????? ???????????? ???????, ? ????? ??????? ?????.
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.jpa.defer-datasource-initialization=true
+#?????? ????????? ???? data.sql
+
+#spring.sql.init.mode=always
 
 #spring.datasource.url=jdbc:postgresql:ec2-54-247-158-179.eu-west-1.compute.amazonaws.com:5432/d2um126le5notq?ssl=true&sslmode=require&sslfactory=org.postgresql.ssl.NonValidatingFactory
 #spring.datasource.username=ulmbeywyhvsxa
