--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,11 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:12}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 #Hibernate ??????? ??????? ???????????? ???????, ? ????? ??????? ?????.
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #spring.jpa.defer-datasource-initialization=true
