--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 #Hibernate ??????? ??????? ???????????? ???????, ? ????? ??????? ?????.
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #spring.jpa.defer-datasource-initialization=true
